--- a/DoAnRapChieuPhim.csproj
+++ b/DoAnRapChieuPhim.csproj
@@ -72,6 +72,16 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>DoAnRapChieuPhim03DataSet17.xsd</DependentUpon>
     </Compile>
+    <Compile Include="DoAnRapChieuPhim03DataSet18.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DoAnRapChieuPhim03DataSet18.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="DoAnRapChieuPhim03DataSet19.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DoAnRapChieuPhim03DataSet19.xsd</DependentUpon>
+    </Compile>
     <Compile Include="DOAN\AddDoAn.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -356,6 +366,28 @@
     </None>
     <None Include="DoAnRapChieuPhim03DataSet17.xss">
       <DependentUpon>DoAnRapChieuPhim03DataSet17.xsd</DependentUpon>
+    </None>
+    <None Include="DoAnRapChieuPhim03DataSet18.xsc">
+      <DependentUpon>DoAnRapChieuPhim03DataSet18.xsd</DependentUpon>
+    </None>
+    <None Include="DoAnRapChieuPhim03DataSet18.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>DoAnRapChieuPhim03DataSet18.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="DoAnRapChieuPhim03DataSet18.xss">
+      <DependentUpon>DoAnRapChieuPhim03DataSet18.xsd</DependentUpon>
+    </None>
+    <None Include="DoAnRapChieuPhim03DataSet19.xsc">
+      <DependentUpon>DoAnRapChieuPhim03DataSet19.xsd</DependentUpon>
+    </None>
+    <None Include="DoAnRapChieuPhim03DataSet19.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>DoAnRapChieuPhim03DataSet19.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="DoAnRapChieuPhim03DataSet19.xss">
+      <DependentUpon>DoAnRapChieuPhim03DataSet19.xsd</DependentUpon>
     </None>
     <None Include="DoAnRapChieuPhim03DataSet2.xsc">
       <DependentUpon>DoAnRapChieuPhim03DataSet2.xsd</DependentUpon>
